# payment_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_payments_and_outbox.py
app/: broker.py  main.py
app/api/: dependencies.py
app/api/v1/: payments.py
app/core/: config.py
app/db/: session.py
app/models/: outbox.py  payment.py
app/repositories/: outbox_repository.py  payment_repository.py
app/schemas/: events.py  payment.py
app/services/: payment_service.py
app/utils/: webhook.py
app/workers/: consumer.py  outbox_publisher.py
