[project]
name = "payment-processing-service"
version = "0.1.0"
description = "Async payment processing service with outbox pattern"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "sqlalchemy>=2.0.32,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "alembic>=1.13.2,<2.0.0",
    "faststream[rabbit]>=0.5.20,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "orjson>=3.10.7,<4.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
